--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,8 @@
               "src/assets"
             ],
             "styles": [
+              // "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ti-icons/css/themify-icons.css",
               "src/styles.scss"
             ],
             "scripts": []
