--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@fontsource/roboto": "^4.5.8",
+    "bootstrap": "^5.2.3",
     "rxjs": "~7.5.0",
+    "ti-icons": "^0.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
